dfir_rs/tests/compile-fail-stable/surface_degenerate_tee.rs
../compile-fail/surface_degenerate_tee.rs